--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<!-- NAVIGATION -->
-	<nav class="nav">
+	<nav class="top-nav nav">
 		<div class="nav">
 			<i class="fa fa-heart fa-2x"></i>
 			<span>COLORFUL FLAT</span>
@@ -105,24 +105,31 @@
 			</p>
 		</div>
 
-		<div class="row">
-			<div class="btn-group" role="group" aria-label="...">
-				<button type="button" class="btn btn-default">Left</button>
-				<button type="button" class="btn btn-default">Middle</button>
-				<button type="button" class="btn btn-default">Right</button>
-			</div>
+		<div class="row portfolio-btns text-center">
+			<ul class="nav nav-pills">
+				<li role="presentation" class="active"><a href="#">ALL</a></li>
+				<li role="presentation"><a href="#">WEB</a></li>
+				<li role="presentation"><a href="#">MOBILE</a></li>
+				<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
+				<li role="presentation"><a href="#">DESIGN</a></li>
+				<li role="presentation"><a href="#">TYPE</a></li>
+			</ul>
 		</div>
 
 
 		<div class="row">
 			<div class="container">
-				<img src="">
-				<img src="">
-				<img src="">
-				<img src="">
-				<img src="">
-				<img src="">
+				<img class="col-md-3 col-md-offset-1" src="images/bird1.png">
+				<img class="col-md-3 col-md-offset-1" src="images/bird2.png">
+				<img class="col-md-3 col-md-offset-1" src="images/bird3.png">
+				<img class="col-md-3 col-md-offset-1" src="images/bird4.png">
+				<img class="col-md-3 col-md-offset-1" src="images/bird5.png">
+				<img class="col-md-3 col-md-offset-1" src="images/bird6.png">
 			</div>
+		</div>
+
+		<div class="btn">
+			<p>SHOW MORE</p>
 		</div>
 
 	</div>
