--- a/index.html
+++ b/index.html
@@ -134,6 +134,124 @@
 
 	</div>
 
+	<!-- TEMPLATES -->
+	<div class="container-fluid" id="templates">
+		<div class="container">
+			<img src="images/browser.jpg">
+			<h1 class="section-heading">
+				Layered Neatly Photoshop Template
+			</h1>
+			<p class="section-description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<div class="btn">
+				<p>SHOW MORE</p>
+			</div>
+		</div>
+
+		<!-- DIVIDER -->
+		<div class="DIVIDER"></div>
+
+		<div class="container">
+			
+			<h1 class="section-heading">
+				Layered Neatly Photoshop Template
+			</h1>
+			<p class="section-description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<div class="btn">
+				<p>SHOW MORE</p>
+			</div>
+
+			<img src="images/browser.jpg">
+		</div>
+	</div>
+
+	<!-- TEAM -->
+	<div class="container-fluid text-center" id="team">
+		<div class="row">
+			<h1 class="section-heading">
+				MEET OUR TEAM
+			</h1>
+
+			<p class="section-description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</p>
+		</div>
+
+		<div class="row">
+			
+		</div>
+	</div>
+
+	<!-- RECENT POSTS -->
+	<div class="container-fluid text-center" id="blog">
+		<div class="row">
+			<h1 class="section-heading">
+				RECENT POSTS
+			</h1>
+
+			<p class="section-description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</p>
+		</div>
+
+		<div class="row">
+			
+		</div>
+
+		<div class="btn">
+			SHOW MORE
+		</div>
+	</div>
+
+	<!-- CONTACT -->
+	<div class="container-fluid text-center" id="contact">
+		<div class="row">
+			<h1 class="section-heading">
+				CONTACT US
+			</h1>
+
+			<p class="section-description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.
+			</p>
+		</div>
+
+		<div class="btn">
+			SHOW MORE
+		</div>
+	</div>
+
+	<div class="DIVIDER"></div>
+
+	<!-- FOOTER -->
+	<footer class="container-fluid">
+		<!-- SOCIAL MEDIA ICONS -->
+		<div>
+			
+		</div>
+
+		<div class="container footer-text text-right">
+			<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+		</div>
+	</footer>
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
