--- a/index.html
+++ b/index.html
@@ -34,225 +34,276 @@
 	</nav>
 
 	<!-- CAROUSEL -->
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-		<ol class="carousel-indicators">
-			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-		</ol>
+	<section>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
 
-		<!-- Wrapper for slides -->
-		<div class="carousel-inner" role="listbox">
-			<div class="item active">
-				<img src="images/template.png" alt="Template">
-			</div>
-			<div class="item">
-				<img src="images/sunset.jpg" alt="Sunset">
-				<div class="carousel-caption">
-					Sunset
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="images/template.png" alt="Template">
+				</div>
+				<div class="item">
+					<img src="images/sunset.jpg" alt="Sunset">
+					<div class="carousel-caption">
+						Sunset
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<!-- Controls -->
-		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</section>
 
 	<!-- SERVICES -->
-	<div class="container" id="services">
-		<div class="col-md-4 text-center">
-			<img class="rounded" src="images/desktop.png">
-			<h1>Flat Design</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-
+	<section id="services">
+		<div class="container">
 			<div class="col-md-4 text-center">
-				<img class="rounded" src="images/lightbulb.png">
-				<h1>Great Ideas</h1>
+				<img class="rounded" src="images/desktop.png">
+				<h1>Flat Design</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
 
 				<div class="col-md-4 text-center">
-					<img class="rounded" src="images/browser.jpg">
-					<h1>Browser Compatibility</h1>
+					<img class="rounded" src="images/lightbulb.png">
+					<h1>Great Ideas</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+
+					<div class="col-md-4 text-center">
+						<img class="rounded" src="images/browser.jpg">
+						<h1>Browser Compatibility</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
 	<!-- PORTFOLIO -->
-	<div class="container-fluid text-center" id="portfolio">
-		<div class="row col-md-4 col-md-offset-4">
-			<h1 class="section-heading">
-				RECENT WORKS
-			</h1>
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.
-			</p>
-		</div>
-
-		<div class="row portfolio-btns text-center">
-			<ul class="nav nav-pills">
-				<li role="presentation" class="active"><a href="#">ALL</a></li>
-				<li role="presentation"><a href="#">WEB</a></li>
-				<li role="presentation"><a href="#">MOBILE</a></li>
-				<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
-				<li role="presentation"><a href="#">DESIGN</a></li>
-				<li role="presentation"><a href="#">TYPE</a></li>
-			</ul>
-		</div>
-
-
-		<div class="row">
-			<div class="container">
-				<img class="col-md-3 col-md-offset-1" src="images/bird1.png">
-				<img class="col-md-3 col-md-offset-1" src="images/bird2.png">
-				<img class="col-md-3 col-md-offset-1" src="images/bird3.png">
-				<img class="col-md-3 col-md-offset-1" src="images/bird4.png">
-				<img class="col-md-3 col-md-offset-1" src="images/bird5.png">
-				<img class="col-md-3 col-md-offset-1" src="images/bird6.png">
+	<section id="portfolio">
+		<div class="container-fluid text-center">
+			<div class="row col-md-4 col-md-offset-4">
+				<h1 class="section-heading">
+					RECENT WORKS
+				</h1>
+				<p class="section-description">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.
+				</p>
 			</div>
-		</div>
 
-		<div class="btn">
-			<p>SHOW MORE</p>
-		</div>
+			<div class="row portfolio-btns text-center">
+				<ul class="nav nav-pills">
+					<li role="presentation" class="active"><a href="#">ALL</a></li>
+					<li role="presentation"><a href="#">WEB</a></li>
+					<li role="presentation"><a href="#">MOBILE</a></li>
+					<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
+					<li role="presentation"><a href="#">DESIGN</a></li>
+					<li role="presentation"><a href="#">TYPE</a></li>
+				</ul>
+			</div>
 
-	</div>
+
+			<div class="row">
+				<div class="container">
+					<img class="col-md-3 col-md-offset-1" src="images/bird1.png">
+					<img class="col-md-3 col-md-offset-1" src="images/bird2.png">
+					<img class="col-md-3 col-md-offset-1" src="images/bird3.png">
+					<img class="col-md-3 col-md-offset-1" src="images/bird4.png">
+					<img class="col-md-3 col-md-offset-1" src="images/bird5.png">
+					<img class="col-md-3 col-md-offset-1" src="images/bird6.png">
+				</div>
+			</div>
+
+			<div class="btn">
+				<p>SHOW MORE</p>
+			</div>
+
+		</div>
+	</section>
 
 	<!-- TEMPLATES -->
-	<div class="container-fluid" id="templates">
-		<div class="container">
-			<img src="images/browser.jpg">
-			<h1 class="section-heading">
-				Layered Neatly Photoshop Template
-			</h1>
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
+	<section id="templates">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-2 col-md-offset-2">
+					<img src="images/browser.jpg">
+				</div>
+				<div class="col-md-6">
+					<h1 class="section-heading">
+						Layered Neatly Photoshop Template
+					</h1>
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
 
-			<div class="btn">
-				<p>SHOW MORE</p>
-			</div>
-		</div>
-
-		<!-- DIVIDER -->
-		<div class="DIVIDER"></div>
-
-		<div class="container">
-			
-			<h1 class="section-heading">
-				Layered Neatly Photoshop Template
-			</h1>
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-
-			<div class="btn">
-				<p>SHOW MORE</p>
+					<div class="btn" id="btn1">
+						<p>SHOW MORE</p>
+					</div>
+				</div>
 			</div>
 
-			<img src="images/browser.jpg">
+			<!-- DIVIDER -->
+			<hr class="col-md-8 col-md-offset-2" />
+
+			<div class="row">
+				<div class="col-md-6 col-md-offset-2">
+					<h1 class="section-heading">
+						Layered Neatly Photoshop Template
+					</h1>
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+
+					<div class="btn" id="btn2">
+						<p>SHOW MORE</p>
+					</div>
+				</div>
+
+				<div class="col-md-4 pull-right">
+					<img src="images/browser.jpg">
+				</div>
+			</div>
 		</div>
-	</div>
+	</section>
 
 	<!-- TEAM -->
-	<div class="container-fluid text-center" id="team">
-		<div class="row">
-			<h1 class="section-heading">
-				MEET OUR TEAM
-			</h1>
+	<section id="team">
+		<div class="container-fluid text-center">
+			<div class="row col-md-4 col-md-offset-4">
+				<h1 class="section-heading">
+					MEET OUR TEAM
+				</h1>
 
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.
-			</p>
-		</div>
+				<p class="section-description">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.
+				</p>
+			</div>
 
-		<div class="row">
-			
-		</div>
-	</div>
+			<div class="row">
+				<div class="col-xs-18 col-sm-6 col-md-2">
+					<div class="thumbnail">
+						<img src="http://placehold.it/500x300" alt="">
+						<div class="caption">
+							<h4>John Smith</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+						</div>
+					</div>
+				</div>
 
-	<!-- RECENT POSTS -->
-	<div class="container-fluid text-center" id="blog">
-		<div class="row">
-			<h1 class="section-heading">
-				RECENT POSTS
-			</h1>
+				<div class="col-xs-18 col-sm-6 col-md-2">
+					<div class="thumbnail">
+						<img src="http://placehold.it/500x300" alt="">
+						<div class="caption">
+							<h4>John Smith</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+						</div>
+					</div>
+				</div>
 
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.
-			</p>
-		</div>
+				<div class="col-xs-18 col-sm-6 col-md-2">
+					<div class="thumbnail">
+						<img src="http://placehold.it/500x300" alt="">
+						<div class="caption">
+							<h4>John Smith</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-		<div class="row">
-			
-		</div>
+		<!-- RECENT POSTS -->
+		<section id="blog">
+			<div class="container-fluid text-center">
+				<div class="row col-md-4 col-md-offset-4">
+					<h1 class="section-heading">
+						RECENT POSTS
+					</h1>
 
-		<div class="btn">
-			SHOW MORE
-		</div>
-	</div>
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				</div>
 
-	<!-- CONTACT -->
-	<div class="container-fluid text-center" id="contact">
-		<div class="row">
-			<h1 class="section-heading">
-				CONTACT US
-			</h1>
+				<div class="row">
 
-			<p class="section-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.
-			</p>
-		</div>
+				</div>
 
-		<div class="btn">
-			SHOW MORE
-		</div>
-	</div>
+				<div class="btn">
+					SHOW MORE
+				</div>
+			</div>
+		</section>
 
-	<div class="DIVIDER"></div>
+		<!-- CONTACT -->
+		<section id="contact">
+			<div class="container-fluid text-center">
+				<div class="row col-md-4 col-md-offset-4">
+					<h1 class="section-heading">
+						CONTACT US
+					</h1>
 
-	<!-- FOOTER -->
-	<footer class="container-fluid">
-		<!-- SOCIAL MEDIA ICONS -->
-		<div>
-			
-		</div>
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				</div>
 
-		<div class="container footer-text text-right">
-			<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
-		</div>
-	</footer>
+				<div class="btn">
+					SHOW MORE
+				</div>
+			</div>
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
-</html>
+			<hr />
+
+			<!-- FOOTER -->
+			<footer class="container-fluid">
+				<!-- SOCIAL MEDIA ICONS -->
+				<div>
+
+				</div>
+
+				<div class="container footer-text text-right">
+					<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+				</div>
+			</footer>
+		</section>
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	</body>
+	</html>
