--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 	<section id="templates">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-2 col-md-offset-2">
+				<div class="col-md-2 col-sm-4 col-md-offset-2">
 					<img src="images/browser.jpg">
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 col-sm-8">
 					<h1 class="section-heading">
 						Layered Neatly Photoshop Template
 					</h1>
@@ -170,7 +170,7 @@
 			<hr class="col-md-8 col-md-offset-2" />
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-2">
+				<div class="col-md-6 col-sm-8 col-md-offset-2">
 					<h1 class="section-heading">
 						Layered Neatly Photoshop Template
 					</h1>
@@ -188,7 +188,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 pull-right">
+				<div class="col-md-4 col-sm-4 pull-right">
 					<img src="images/browser.jpg">
 				</div>
 			</div>
@@ -198,47 +198,96 @@
 	<!-- TEAM -->
 	<section id="team">
 		<div class="container-fluid text-center">
-			<div class="row col-md-4 col-md-offset-4">
-				<h1 class="section-heading">
-					MEET OUR TEAM
-				</h1>
+			<div class="team-header container-fluid text-center">
+				<div class="row col-md-4 col-md-offset-4">
+					<h1 class="section-heading">
+						MEET OUR TEAM
+					</h1>
 
-				<p class="section-description">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.
-				</p>
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-xs-18 col-sm-6 col-md-2">
-					<div class="thumbnail">
-						<img src="http://placehold.it/500x300" alt="">
-						<div class="caption">
-							<h4>John Smith</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+			<div class="container-fluid text-center">
+				<div class="row">
+					<div class="col-xs-18 col-sm-4 col-md-2 col-md-offset-3">
+						<div class="thumbnail">
+							<img src="http://placehold.it/500x300" alt="">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<h5>Creative Director</h5>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+								<div class="facebook">
+									<a href="">
+										<i class="fa fa-facebook fa-2x"></i>
+									</a>
+								</div>
+								<div class="twitter">
+									<a href="">
+										<i class="fa fa-twitter fa-2x"></i>
+									</a>
+								</div>
+								<div class="pinterest">
+									<a href="">
+										<i class="fa fa-pinterest fa-2x"></i>
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="col-xs-18 col-sm-6 col-md-2">
-					<div class="thumbnail">
-						<img src="http://placehold.it/500x300" alt="">
-						<div class="caption">
-							<h4>John Smith</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+					<div class="col-xs-18 col-sm-4 col-md-2">
+						<div class="thumbnail">
+							<img src="http://placehold.it/500x300" alt="">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<h5>Creative Director</h5>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+								<div class="facebook">
+									<a href="">
+										<i class="fa fa-facebook fa-2x"></i>
+									</a>
+								</div>
+								<div class="twitter">
+									<a href="">
+										<i class="fa fa-twitter fa-2x"></i>
+									</a>
+								</div>
+								<div class="pinterest">
+									<a href="">
+										<i class="fa fa-pinterest fa-2x"></i>
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="col-xs-18 col-sm-6 col-md-2">
-					<div class="thumbnail">
-						<img src="http://placehold.it/500x300" alt="">
-						<div class="caption">
-							<h4>John Smith</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-							<p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs" role="button">Button</a></p>
+					<div class="col-xs-18 col-sm-4 col-md-2">
+						<div class="thumbnail">
+							<img src="http://placehold.it/500x300" alt="">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<h5>Creative Director</h5>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+								<div class="facebook">
+									<a href="">
+										<i class="fa fa-facebook fa-2x"></i>
+									</a>
+								</div>
+								<div class="twitter">
+									<a href="">
+										<i class="fa fa-twitter fa-2x"></i>
+									</a>
+								</div>
+								<div class="pinterest">
+									<a href="">
+										<i class="fa fa-pinterest fa-2x"></i>
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
