--- a/index.html
+++ b/index.html
@@ -100,17 +100,20 @@
 	<!-- PORTFOLIO -->
 	<section id="portfolio">
 		<div class="container-fluid text-center">
-			<div class="row col-md-4 col-md-offset-4">
-				<h1 class="section-heading">
-					RECENT WORKS
-				</h1>
-				<p class="section-description">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.
-				</p>
-			</div>
+			<div class="header container-fluid text-center">
+				<div class="row col-md-4 col-md-offset-4">
+					<h1 class="section-heading">
+						RECENT WORKS
+					</h1>
 
-			<div class="row portfolio-btns text-center">
+					<p class="section-description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				</div>
+			</div>
+			<div class="container-fluid text-center">
+			<div class="row col-md-6 col-md-offset-4 portfolio-btns text-center">
 				<ul class="nav nav-pills">
 					<li role="presentation" class="active"><a href="#">ALL</a></li>
 					<li role="presentation"><a href="#">WEB</a></li>
@@ -119,6 +122,7 @@
 					<li role="presentation"><a href="#">DESIGN</a></li>
 					<li role="presentation"><a href="#">TYPE</a></li>
 				</ul>
+			</div>
 			</div>
 
 
@@ -198,7 +202,7 @@
 	<!-- TEAM -->
 	<section id="team">
 		<div class="container-fluid text-center">
-			<div class="team-header container-fluid text-center">
+			<div class="header container-fluid text-center">
 				<div class="row col-md-4 col-md-offset-4">
 					<h1 class="section-heading">
 						MEET OUR TEAM
@@ -295,64 +299,143 @@
 		</section>
 
 		<!-- RECENT POSTS -->
-		<section id="blog">
+		<section id="recentposts">
 			<div class="container-fluid text-center">
-				<div class="row col-md-4 col-md-offset-4">
-					<h1 class="section-heading">
-						RECENT POSTS
-					</h1>
+				<div class="header container-fluid text-center">
+					<div class="row col-md-4 col-md-offset-4">
+						<h1 class="section-heading">
+							RECENT POSTS
+						</h1>
 
-					<p class="section-description">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.
-					</p>
+						<p class="section-description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.
+						</p>
+					</div>
 				</div>
 
-				<div class="row">
+				<div class="container-fluid text-center">
+				<div class="row posts">
+						<div class="col-xs-18 col-sm-4 col-md-4">
+							<div class="thumbnail">
+								<img src="http://placehold.it/500x300" alt="">
+								<div class="caption">
+									<h4>Really Interesting Post</h4>
+									<h5>October 27</h5>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+									<div class="facebook">
+										<a href="">
+											<i class="fa fa-facebook fa-2x"></i>
+										</a>
+									</div>
+									<div class="twitter">
+										<a href="">
+											<i class="fa fa-twitter fa-2x"></i>
+										</a>
+									</div>
+									<div class="pinterest">
+										<a href="">
+											<i class="fa fa-pinterest fa-2x"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
 
+						<div class="col-xs-18 col-sm-4 col-md-4">
+							<div class="thumbnail">
+								<img src="http://placehold.it/500x300" alt="">
+								<div class="caption">
+									<h4>Really Interesting Post</h4>
+									<h5>October 27</h5>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+									<div class="facebook">
+										<a href="">
+											<i class="fa fa-facebook fa-2x"></i>
+										</a>
+									</div>
+									<div class="twitter">
+										<a href="">
+											<i class="fa fa-twitter fa-2x"></i>
+										</a>
+									</div>
+									<div class="pinterest">
+										<a href="">
+											<i class="fa fa-pinterest fa-2x"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-xs-18 col-sm-4 col-md-4">
+							<div class="thumbnail">
+								<img src="http://placehold.it/500x300" alt="">
+								<div class="caption">
+									<h4>Really Interesting Post</h4>
+									<h5>October 27</h5>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+									<div class="facebook">
+										<a href="">
+											<i class="fa fa-facebook fa-2x"></i>
+										</a>
+									</div>
+									<div class="twitter">
+										<a href="">
+											<i class="fa fa-twitter fa-2x"></i>
+										</a>
+									</div>
+									<div class="pinterest">
+										<a href="">
+											<i class="fa fa-pinterest fa-2x"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="btn">
+						SHOW MORE
+					</div>
+				</div>
+			</section>
+
+			<!-- CONTACT -->
+			<section id="contact">
+				<div class="container-fluid text-center">
+					<div class="row col-md-4 col-md-offset-4">
+						<h1 class="section-heading">
+							CONTACT US
+						</h1>
+
+						<p class="section-description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua.
+						</p>
+					</div>
+
+					<div class="btn">
+						SHOW MORE
+					</div>
 				</div>
 
-				<div class="btn">
-					SHOW MORE
-				</div>
-			</div>
-		</section>
+				<hr />
 
-		<!-- CONTACT -->
-		<section id="contact">
-			<div class="container-fluid text-center">
-				<div class="row col-md-4 col-md-offset-4">
-					<h1 class="section-heading">
-						CONTACT US
-					</h1>
+				<!-- FOOTER -->
+				<footer class="container-fluid">
+					<!-- SOCIAL MEDIA ICONS -->
+					<div>
 
-					<p class="section-description">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.
-					</p>
-				</div>
+					</div>
 
-				<div class="btn">
-					SHOW MORE
-				</div>
-			</div>
+					<div class="container footer-text text-right">
+						<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+					</div>
+				</footer>
+			</section>
 
-			<hr />
-
-			<!-- FOOTER -->
-			<footer class="container-fluid">
-				<!-- SOCIAL MEDIA ICONS -->
-				<div>
-
-				</div>
-
-				<div class="container footer-text text-right">
-					<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
-				</div>
-			</footer>
-		</section>
-
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	</body>
-	</html>
+			<!-- Latest compiled and minified JavaScript -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		</body>
+		</html>
