added contact and footer

--- a/index.html
+++ b/index.html
@@ -46,13 +46,10 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
-					<img src="images/template.png" alt="Template">
+					<img class="img-responsive" src="http://placehold.it/1600x500" alt="Template">
 				</div>
 				<div class="item">
-					<img src="images/sunset.jpg" alt="Sunset">
-					<div class="carousel-caption">
-						Sunset
-					</div>
+					<img class="img-responsive" src="http://placehold.it/1600x500" alt="Template 2">
 				</div>
 			</div>
 
@@ -113,27 +110,27 @@
 				</div>
 			</div>
 			<div class="container-fluid text-center">
-			<div class="row col-md-6 col-md-offset-4 portfolio-btns text-center">
-				<ul class="nav nav-pills">
-					<li role="presentation" class="active"><a href="#">ALL</a></li>
-					<li role="presentation"><a href="#">WEB</a></li>
-					<li role="presentation"><a href="#">MOBILE</a></li>
-					<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
-					<li role="presentation"><a href="#">DESIGN</a></li>
-					<li role="presentation"><a href="#">TYPE</a></li>
-				</ul>
-			</div>
+				<div class="row col-md-6 col-md-offset-4 portfolio-btns text-center">
+					<ul class="nav nav-pills">
+						<li role="presentation" class="active"><a href="#">ALL</a></li>
+						<li role="presentation"><a href="#">WEB</a></li>
+						<li role="presentation"><a href="#">MOBILE</a></li>
+						<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
+						<li role="presentation"><a href="#">DESIGN</a></li>
+						<li role="presentation"><a href="#">TYPE</a></li>
+					</ul>
+				</div>
 			</div>
 
 
 			<div class="row">
 				<div class="container">
-					<img class="col-md-3 col-md-offset-1" src="images/bird1.png">
-					<img class="col-md-3 col-md-offset-1" src="images/bird2.png">
-					<img class="col-md-3 col-md-offset-1" src="images/bird3.png">
-					<img class="col-md-3 col-md-offset-1" src="images/bird4.png">
-					<img class="col-md-3 col-md-offset-1" src="images/bird5.png">
-					<img class="col-md-3 col-md-offset-1" src="images/bird6.png">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
 				</div>
 			</div>
 
@@ -315,7 +312,7 @@
 				</div>
 
 				<div class="container-fluid text-center">
-				<div class="row posts">
+					<div class="row posts">
 						<div class="col-xs-18 col-sm-4 col-md-4">
 							<div class="thumbnail">
 								<img src="http://placehold.it/500x300" alt="">
@@ -414,23 +411,62 @@
 							tempor incididunt ut labore et dolore magna aliqua.
 						</p>
 					</div>
+				</div>
 
+				<div class="container col-md-8 col-md-offset-2">
+					<form>
+						<div class="form-group">
+							<input type="text" class="form-control" aria-describedby="name" placeholder="Name:">
+						</div>
+
+						<div class="form-group">
+							<input type="email" class="form-control" aria-describedby="email" placeholder="Email:">
+						</div>
+
+						<div class="form-group">
+							<textarea class="form-control" aria-describedby="message" rows="5" placeholder="Message:"></textarea>
+						</div>
+					</form>
+				</div>
+
+				<div class="container col-md-12 text-center">
 					<div class="btn">
 						SHOW MORE
 					</div>
 				</div>
 
-				<hr />
+				
 
 				<!-- FOOTER -->
 				<footer class="container-fluid">
 					<!-- SOCIAL MEDIA ICONS -->
-					<div>
+					<div class="container col-md-8 col-md-offset-2">
+					<hr />
+						<div class="facebook text-center">
+							<a href="">
+								<i class="fa fa-facebook fa-2x"></i>
+							</a>
+						</div>
+						<div class="twitter text-center">
+							<a href="">
+								<i class="fa fa-twitter fa-2x"></i>
+							</a>
+						</div>
+						<div class="pinterest text-center">
+							<a href="">
+								<i class="fa fa-pinterest fa-2x"></i>
+							</a>
+						</div>
+						<div class="flickr text-center">
+							<a href="">
+								<i class="fa fa-flickr fa-2x"></i>
+							</a>
+						</div>
 
-					</div>
 
-					<div class="container footer-text text-right">
-						<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+						<div class="footer-text text-right">
+							<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+						</div>
 					</div>
 				</footer>
 			</section>
