--- a/index.html
+++ b/index.html
@@ -28,9 +28,26 @@
 			<li role="presentation" class="active"><a href="#">Home</a></li>
 			<li role="presentation"><a href="#services">Services</a></li>
 			<li role="presentation"><a href="#portfolio">Portfolio</a></li>
-			<li role="presentation"><a href="#blog">Blog</a></li>
+			<li role="presentation"><a href="#recentposts">Blog</a></li>
 			<li role="presentation"><a href="#contact">Contact</a></li>
 		</ul>
+	</nav>
+
+	<nav class="menu navbar navbar-toggleable-md navbar-light bg-faded">
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fa fa-menu"
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 	</nav>
 
 	<!-- CAROUSEL -->
@@ -98,7 +115,7 @@
 	<section id="portfolio">
 		<div class="container-fluid text-center">
 			<div class="header container-fluid text-center">
-				<div class="row col-md-4 col-md-offset-4">
+				<div class="row-fluid col-md-4 col-md-offset-4">
 					<h1 class="section-heading">
 						RECENT WORKS
 					</h1>
@@ -109,7 +126,8 @@
 					</p>
 				</div>
 			</div>
-			<div class="container-fluid text-center">
+
+			<div class="container text-center">
 				<div class="row col-md-6 col-md-offset-4 portfolio-btns text-center">
 					<ul class="nav nav-pills">
 						<li role="presentation" class="active"><a href="#">ALL</a></li>
@@ -125,17 +143,19 @@
 
 			<div class="row">
 				<div class="container">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
-					<img class="col-md-3 col-md-offset-1" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
+					<img class="col-md-3 col-xs-6 col-md-offset-1 img-responsive" src="http://placehold.it/500x300" alt="">
 				</div>
 			</div>
 
-			<div class="btn">
-				<p>SHOW MORE</p>
+			<div class="container">
+				<div class="btn">
+					<p>SHOW MORE</p>
+				</div>
 			</div>
 
 		</div>
@@ -145,8 +165,8 @@
 	<section id="templates">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-2 col-sm-4 col-md-offset-2">
-					<img src="images/browser.jpg">
+				<div class="col-md-2 col-sm-4 col-xs-12 col-md-offset-2 pull-left">
+					<img class="img-responsive template-img" src="images/browser.jpg">
 				</div>
 				<div class="col-md-6 col-sm-8">
 					<h1 class="section-heading">
@@ -171,6 +191,9 @@
 			<hr class="col-md-8 col-md-offset-2" />
 
 			<div class="row">
+				<div class="col-md-4 col-sm-4 col-xs-12 pull-right">
+					<img class="img-responsive template-img" src="images/browser.jpg">
+				</div>
 				<div class="col-md-6 col-sm-8 col-md-offset-2">
 					<h1 class="section-heading">
 						Layered Neatly Photoshop Template
@@ -188,10 +211,6 @@
 						<p>SHOW MORE</p>
 					</div>
 				</div>
-
-				<div class="col-md-4 col-sm-4 pull-right">
-					<img src="images/browser.jpg">
-				</div>
 			</div>
 		</div>
 	</section>
@@ -200,7 +219,7 @@
 	<section id="team">
 		<div class="container-fluid text-center">
 			<div class="header container-fluid text-center">
-				<div class="row col-md-4 col-md-offset-4">
+				<div class="row-fluid col-md-4 col-md-offset-4">
 					<h1 class="section-heading">
 						MEET OUR TEAM
 					</h1>
@@ -221,6 +240,7 @@
 								<h4>John Smith</h4>
 								<h5>Creative Director</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat.</p>
+
 								<div class="facebook">
 									<a href="">
 										<i class="fa fa-facebook fa-2x"></i>
@@ -299,7 +319,7 @@
 		<section id="recentposts">
 			<div class="container-fluid text-center">
 				<div class="header container-fluid text-center">
-					<div class="row col-md-4 col-md-offset-4">
+					<div class="row-fluid col-md-4 col-md-offset-4">
 						<h1 class="section-heading">
 							RECENT POSTS
 						</h1>
@@ -401,7 +421,7 @@
 			<!-- CONTACT -->
 			<section id="contact">
 				<div class="container-fluid text-center">
-					<div class="row col-md-4 col-md-offset-4">
+					<div class="row-fluid col-md-4 col-md-offset-4">
 						<h1 class="section-heading">
 							CONTACT US
 						</h1>
@@ -440,8 +460,8 @@
 				<!-- FOOTER -->
 				<footer class="container-fluid">
 					<!-- SOCIAL MEDIA ICONS -->
-					<div class="container col-md-8 col-md-offset-2">
-					<hr />
+					<div class="container col-md-8 col-sm-4 col-xs-12 col-md-offset-2">
+						<hr />
 						<div class="facebook text-center">
 							<a href="">
 								<i class="fa fa-facebook fa-2x"></i>
