responsive navbar update

--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
 </head>
 <body>
 	<!-- NAVIGATION -->
-	<nav class="top-nav nav hidden-tablet hidden-phone">
+	<nav class="top-nav nav">
 		<div class="nav">
 			<i class="fa fa-heart fa-2x"></i>
 			<span>COLORFUL FLAT</span>
 		</div>
 
-		<ul class="nav nav-pills">
+		<ul class="nav nav-pills hidden-xs hidden-sm">
 			<li role="presentation" class="active"><a href="#">Home</a></li>
 			<li role="presentation"><a href="#services">Services</a></li>
 			<li role="presentation"><a href="#portfolio">Portfolio</a></li>
 			<li role="presentation"><a href="#recentposts">Blog</a></li>
 			<li role="presentation"><a href="#contact">Contact</a></li>
 		</ul>
-	</nav>
 
-	<nav class="top-nav navbar menu hidden-sm-up">
-		<div class="dropdown">
+		<div class="nav dropdown menu hidden-md hidden-lg">
 			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<i class="fa fa-bars fa-2x"></i>
 			</a>
@@ -47,6 +45,8 @@
 			</ul>
 		</div>
 	</nav>
+
+	
 
 	<!-- CAROUSEL -->
 	<section>
@@ -61,15 +61,15 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="http://placehold.it/1600x600" alt="Image 1">
+					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 1">
 				</div>
 
 				<div class="item">
-					<img src="http://placehold.it/1600x600" alt="Image 2">
+					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 2">
 				</div>
 
 				<div class="item">
-					<img src="http://placehold.it/1600x600" alt="Image 3">
+					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 3">
 				</div>
 			</div>
 
